--- a/css/wp.css
+++ b/css/wp.css
@@ -35,7 +35,6 @@ a {
     color: #6b242a;
     text-decoration: none;
     background-color: transparent;
-    font-size: 1.5em;
     line-height: 2em;
 }
 
@@ -66,7 +65,7 @@ a {
 
 
 
-/*   Menu  */
+/*   Menu
 nav{
   padding: 0;
   max-width: 100%;
@@ -77,6 +76,19 @@ nav{
   display: flex;
   flex-wrap: wrap;
   align-items: center;
+}  */
+
+nav {
+    padding: 0;
+    max-width: 100%;
+    background-color: white;
+    box-shadow: 0px 5px 20px #00000096;
+    position: fixed;
+    top: 0;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    width: 100%;
 }
 .navbar-nav {
   display: flex;
