--- a/css/wp.css
+++ b/css/wp.css
@@ -161,7 +161,7 @@ nav {
     min-height: 100px;
     /* background-attachment: fixed; */
     /* background-position-x: center; */
-    margin-top: 60px;
+    margin-top: auto;
     background-repeat: no-repeat;
     display: inline-flex;
     background-size: cover;
@@ -184,7 +184,7 @@ nav {
     background-repeat: no-repeat;
     background-position-x: center;
     display: flex;
-    margin-top: 60px;
+    margin-top: auto;
   }
   .site-branding {
     margin: auto;
@@ -193,13 +193,37 @@ nav {
 /* Blog */
 
 .main-container {
+  background-color: white;
   width: 90%;
   margin: auto;
+  margin-top: 2vw;
+  display: flex;
 }
 
 @media (min-width: 992px){
   .main-container {
-    width: 70%;
-    margin: auto;
+    width: 80%;
+  }
+}
+
+
+/* Article */
+article {
+    float: none;
+    padding: 2%;
+}
+
+
+.attachment-post-thumbnail {
+  max-width: 100%;
+  height: auto;
+  margin: 0px;
+}
+
+@media (min-width: 992px){
+  .attachment-post-thumbnail {
+    max-width: 50%;
+    margin: 20px;
+    float: left;
   }
 }
